JavaScript with IdentityServer4 #3

--- a/Exercises/Authorization.JavaScript/wwwroot/Index.html
+++ b/Exercises/Authorization.JavaScript/wwwroot/Index.html
@@ -5,6 +5,15 @@
 </head>
 <body>
     <h1>IdentityServer4 JavaScript Demo</h1>
+    <div>
+        <p>
+            <button id="login">Login</button>
+        </p>
+        <p>
+            <b id="message"></b>
+            <pre id="data"></pre>
+        </p>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.0/oidc-client.min.js"></script>
     <script src="js/index.js"></script>
