JavaScript with IdentityServer4 #4

--- a/Exercises/Authorization.JavaScript/wwwroot/Index.html
+++ b/Exercises/Authorization.JavaScript/wwwroot/Index.html
@@ -7,7 +7,10 @@
     <h1>IdentityServer4 JavaScript Demo</h1>
     <div>
         <p>
-            <button id="login">Login</button>
+            <button id="login">Log In</button>
+            <button id="callApi">Call API</button>
+            <button id="refresh">Refresh</button>
+            <button id="logout">Log out</button>
         </p>
         <p>
             <b id="message"></b>
